# python-sdk

./: .gitignore  README.md  pyproject.toml  start.py  tags.py  transaction.py  upload.py
examples/: basic.py
irys_sdk/: __init__.py  builder.py  client.py  fund.py  types.py  upload.py  utils.py
irys_sdk/bundle/: __init__.py  constants.py  create.py  dataitem.py  sign.py  tags.py  utils.py
irys_sdk/bundle/signers/: __init__.py  ethereum.py  index.py  signer.py
irys_sdk/tokens/: __init__.py  base.py  ethereum.py
