[tool.poetry]
name = "irys-sdk"
version = "0.1.6"
description = "Official python SDK for Irys bundlers"
authors = ["Jesse Wright <jesse@irys.xyz>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Irys-xyz/python-sdk"
packages = [{include = "irys_sdk"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
avro = "^1.12.0"
base58 = "^2.1.1"
eth-account = "^0.13.4"
web3 = "^7.4.0"
eth-keys = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
